--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -7,26 +7,19 @@
       This page is empty, add some books and proceed to order.
     </p>
     <picture class="shopping-plug-img">
-      <source
-        srcset="
+      <source srcset="
           ./images/shopping-list/books-shopping-list.webp    1x,
           ./images/shopping-list/books-shopping-list@2x.webp 2x
-        "
-        type="image/webp"
-      />
-      <source
-        srcset="
+        " type="image/webp" />
+      <source srcset="
           ./images/shopping-list/books-shopping-list.png    1x,
           ./images/shopping-list/books-shopping-list@2x.png 2x
-        "
-      />
+        " />
 
-      <img
-        src="./images/shopping-list/books-shopping-list.png"
-        alt="Shopping list is empty"
-      />
+      <img src="./images/shopping-list/books-shopping-list.png" alt="Shopping list is empty" />
     </picture>
   </div>
+  <span class="loader is-hidden"></span>
   <ul class="shopping-list"></ul>
   <div id="pagination" class="tui-pagination is-hidden"></div>
 </section>
