Added styles (shadow) for book card

--- a/src/style/layout/main.css
+++ b/src/style/layout/main.css
@@ -189,6 +189,7 @@
 .book-card-wrapper {
   position: relative;
   overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .book-text-backdrop {
@@ -212,4 +213,16 @@
 
 .book-card:focus .book-text-backdrop {
   transform: translateY(70%);
+}
+
+.book-card:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.book-card:focus {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
