--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,7 +37,12 @@
     <div class="switcher-button">
       <div class="switcher">
         <div class="button r" id="button-1">
-          <input type="checkbox" class="checkbox" />
+          <input
+            class="checkbox dark-mode-toggle"
+            type="checkbox"
+            id="dark-mode-toggle"
+            aria-label="toggle dark mode"
+          />
           <div class="knobs"></div>
           <div class="layer"></div>
         </div>
