--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -12,7 +12,12 @@
     </div>
     <div class="switcher">
       <div class="button r" id="button-1">
-        <input type="checkbox" class="checkbox" />
+        <input
+          class="checkbox dark-mode-toggle"
+          type="checkbox"
+          id="dark-mode-toggle"
+          aria-label="toggle dark mode"
+        />
         <div class="knobs"></div>
         <div class="layer"></div>
       </div>
