--- a/src/style/base/common.css
+++ b/src/style/base/common.css
@@ -108,6 +108,7 @@ body {
   line-height: 1.29;
   letter-spacing: -0.56px;
   color: var(--color-black);
+  background: var(--color-body-bg);
 }
 ol,
 ul {
