--- a/src/style/utils/variables.css
+++ b/src/style/utils/variables.css
@@ -1,8 +1,10 @@
 :root {
   --color-black: rgba(17, 17, 17, 1);
   --color-white: rgba(255, 255, 255, 1);
+  --color-white-all-time: rgba(255, 255, 255, 1);
   --color-gray: rgba(180, 175, 175, 1);
   --color-black-transparent: rgba(17, 17, 17, 0.6);
+  --color-body-bg: rgba(255, 255, 255, 1);
   --color-blue: rgba(79, 46, 232, 1);
   --color-light-gray: rgba(246, 246, 246, 1);
   --color-solid-black: rgba(0, 0, 0, 1);
@@ -25,4 +27,47 @@
   );
   --layer-bgc-gradient: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
   --layer-bg-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1) inset;
+
+  --clr-light: rgba(255, 255, 255, 1);
+  --clr-dark: rgba(17, 17, 17, 1);
+  --clr-primary: #dbffa2;
+  --clr-secondary: #c3fcf2;
+  --clr-accent: #ff7750;
+
+  --foreground: var(--clr-dark);
+  --background: var(--clr-light);
+
+  --ff-title: 'Playfair Display', serif;
+  --ff-body: 'Assistant', sans-serif;
+}
+
+/* .darkmode {
+  --clr-light: #fdffc4;
+  --clr-dark: rgba(17, 17, 17, 1);
+  --clr-primary: #202302;
+  --clr-secondary: #00100d;
+  --clr-accent: #ff7750;
+
+  --foreground: var(--clr-light);
+  --background: var(--clr-dark);
+} */
+
+.darkmode {
+  /* --color-black: rgba(17, 17, 17, 1); */
+  --color-black: rgba(255, 255, 255, 1);
+  --color-white: rgba(17, 17, 17, 1);
+
+  --color-gray: rgba(180, 175, 175, 1);
+  --color-black-transparent: rgba(17, 17, 17, 0.6);
+  --color-body-bg: rgba(32, 32, 36, 1);
+  --color-blue: rgba(79, 46, 232, 1);
+  --color-light-gray: rgba(246, 246, 246, 1);
+  --color-solid-black: rgba(0, 0, 0, 1);
+  --color-light-gray2: rgba(224, 224, 224, 1);
+  --color-gold: rgba(234, 198, 69, 1);
+  --linear-gradient: linear-gradient(
+    90deg,
+    rgba(79, 46, 232, 1),
+    rgba(220, 220, 220, 1)
+  );
 }
