--- a/src/style/layout/support.css
+++ b/src/style/layout/support.css
@@ -9,7 +9,7 @@
     #fff 100%
   );
   box-shadow: 0px 10px 10px 0px rgba(245, 245, 247, 0.1);
-
+  min-height: 460px;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -24,7 +24,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 40px;
-  color: var(--color-white, #ffffff);
+  color: var(--color-white-all-time, #ffffff);
   font-size: 22px;
   font-style: normal;
   font-weight: 700;
@@ -36,10 +36,9 @@
   flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
-  margin-right: 112px;
 }
 .section-support-link {
-  color: var(--color-white, #ffffff);
+  color: var(--color-white-all-time, #ffffff);
   display: flex;
   align-items: center;
   font-size: 14px;
@@ -47,11 +46,10 @@
   font-weight: 400;
   line-height: 1, 28;
   letter-spacing: -0.56px;
+  height: 32px;
 }
 
 .section-support-png {
-  width: 100%;
-  height: 32px;
   padding-left: 16px;
 }
 
@@ -61,7 +59,7 @@
 .section-support-btn {
   width: 32px;
   height: 32px;
-  background: var(--color-white);
+  background: var(--color-white-all-time-color-white, #ffffff);
   border: none;
   display: flex;
   justify-content: center;
@@ -86,6 +84,13 @@
 @media screen and (min-width: 375px) {
   .section-support {
     max-width: 335px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+  .section-support-container {
+    min-width: 335px;
   }
 }
 
@@ -108,7 +113,6 @@
     margin-bottom: 44px;
   }
   .section-support-list {
-    margin-right: 130px;
   }
   .section-support-btn {
     width: 38px;
