--- a/src/style/layout/main.css
+++ b/src/style/layout/main.css
@@ -54,7 +54,6 @@
 
 .book-card-img {
   border-radius: 8px;
-  margin-bottom: 14px;
   width: 335px;
   height: 485px;
 }
@@ -74,6 +73,7 @@
 }
 
 .book-card-title {
+  margin-top: 14px;
   margin-left: auto;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -193,6 +193,7 @@
 }
 
 .book-text-backdrop {
+  border-radius: 0 0 8px 8px;
   background-color: var(--color-blue);
   color: var(--color-white);
   line-height: 1.5;
@@ -202,27 +203,20 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 33.33%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .book-card:hover .book-text-backdrop {
-  transform: translateY(70%);
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(200%);
 }
 
 .book-card:focus .book-text-backdrop {
-  transform: translateY(70%);
-}
-
-.book-card:hover {
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.book-card:focus {
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(200%);
 }
