mobile menu 320px fixed
in mobile menu, switcher of dark mode works correctly.

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -15,7 +15,7 @@
         <input
           class="checkbox dark-mode-toggle"
           type="checkbox"
-          id="dark-mode-toggle"
+          id="dark-mode-toggle-two"
           aria-label="toggle dark mode"
         />
         <div class="knobs"></div>
