produce html and js

--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -1,5 +1,5 @@
 <section class="shopping">
-  <h2 class="main-header">
+  <h2 class="main-header shopping-header">
     Shopping <span class="main-header-accent">List</span>
   </h2>
   <div class="shopping-plug">
