dark-mood-desktop

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -65,7 +65,12 @@
       <div class="signup-container">
         <a href="./login.html" class="signup-link" id="signup-link">
           <span class="signup-text"> Sign up </span>
-          <svg width="20" height="20" aria-label="Sign up Icon">
+          <svg
+            class="signup-svg"
+            width="20"
+            height="20"
+            aria-label="Sign up Icon"
+          >
             <use href="./images/sprite.svg#arrow-right"></use>
           </svg>
         </a>
