--- a/src/style/layout/clock.css
+++ b/src/style/layout/clock.css
@@ -1,6 +1,6 @@
 .clock {
   display: none;
-  color: #4f2ee8;
+  color: var(--color-blue-gold);
   font-size: 30px;
   font-family: Orbitron;
   letter-spacing: 7px;
