--- a/src/style/utils/variables.css
+++ b/src/style/utils/variables.css
@@ -1,12 +1,17 @@
 :root {
   --color-black: rgba(17, 17, 17, 1);
   --color-white: rgba(255, 255, 255, 1);
+  --color-blue-gold: rgba(79, 46, 232, 1);
+
   --color-white-all-time: rgba(255, 255, 255, 1);
-  --color-gray: rgba(180, 175, 175, 1);
+
+  --color-light-gray: rgba(246, 246, 246, 1);
   --color-black-transparent: rgba(17, 17, 17, 0.6);
+  --color-gray: rgba(180, 175, 175, 1);
+
   --color-body-bg: rgba(255, 255, 255, 1);
   --color-blue: rgba(79, 46, 232, 1);
-  --color-light-gray: rgba(246, 246, 246, 1);
+
   --color-solid-black: rgba(0, 0, 0, 1);
   --color-light-gray2: rgba(224, 224, 224, 1);
   --color-gold: rgba(234, 198, 69, 1);
@@ -25,43 +30,20 @@
     #4f2ee8 18.03%,
     #fff 100%
   );
-  --layer-bgc-gradient: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
-  --layer-bg-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1) inset;
-
-  --clr-light: rgba(255, 255, 255, 1);
-  --clr-dark: rgba(17, 17, 17, 1);
-  --clr-primary: #dbffa2;
-  --clr-secondary: #c3fcf2;
-  --clr-accent: #ff7750;
-
-  --foreground: var(--clr-dark);
-  --background: var(--clr-light);
-
-  --ff-title: 'Playfair Display', serif;
-  --ff-body: 'Assistant', sans-serif;
 }
 
-/* .darkmode {
-  --clr-light: #fdffc4;
-  --clr-dark: rgba(17, 17, 17, 1);
-  --clr-primary: #202302;
-  --clr-secondary: #00100d;
-  --clr-accent: #ff7750;
-
-  --foreground: var(--clr-light);
-  --background: var(--clr-dark);
-} */
-
 .darkmode {
-  /* --color-black: rgba(17, 17, 17, 1); */
   --color-black: rgba(255, 255, 255, 1);
   --color-white: rgba(17, 17, 17, 1);
+  --color-body-bg: rgba(32, 32, 36, 1);
+
+  --color-black-transparent: rgba(255, 255, 255, 0.6);
+  --color-light-gray: rgba(17, 17, 17, 0.6);
+  --color-blue-gold: rgba(234, 198, 69, 1);
+  --color-blue: rgba(79, 46, 232, 1);
 
   --color-gray: rgba(180, 175, 175, 1);
-  --color-black-transparent: rgba(17, 17, 17, 0.6);
-  --color-body-bg: rgba(32, 32, 36, 1);
-  --color-blue: rgba(79, 46, 232, 1);
-  --color-light-gray: rgba(246, 246, 246, 1);
+
   --color-solid-black: rgba(0, 0, 0, 1);
   --color-light-gray2: rgba(224, 224, 224, 1);
   --color-gold: rgba(234, 198, 69, 1);
@@ -69,5 +51,10 @@
     90deg,
     rgba(79, 46, 232, 1),
     rgba(220, 220, 220, 1)
+  );
+  --custom-radial-gradient: radial-gradient(
+    189.32% 190.93% at 59.76% -23.42%,
+    #4f2ee8 18.03%,
+    #fff 100%
   );
 }
