--- a/src/style/layout/main.css
+++ b/src/style/layout/main.css
@@ -189,19 +189,18 @@
 .book-card-wrapper {
   position: relative;
   overflow: hidden;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .book-text-backdrop {
   background-color: var(--color-blue-gold);
-  font-size: 20px;
+  font-size: 30px;
   text-transform: uppercase;
   text-align: center;
   border-radius: 0 0 8px 8px;
   color: var(--color-white);
   line-height: 1.5;
   letter-spacing: -0.02em;
-  padding: 20px 32px;
+  padding: 27px 32px;
   position: absolute;
   top: 0;
   left: 0;
@@ -210,6 +209,20 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+  .book-text-backdrop {
+    font-size: 20px;
+    padding: 17px 32px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .book-text-backdrop {
+    font-size: 16px;
+    padding: 15px 28px;
+  }
 }
 
 .book-card:hover .book-text-backdrop {
