--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,16 +1,19 @@
 <div class="modal-shown is-hidden">
-  <div class="modal-content active">
+  <div class="modal-content">
     <button class="close" type="button">
       <svg class="close-icon" width="28" height="28">
         <use href="./images/sprite.svg#icon-x-close"></use>
       </svg>
     </button>
-  </div>
-  <div class="modal-body">
-    <div class="modal-book-card"></div>
-    <div>
+
+    <div class="modal-body">
+      <div class="modal-book-card"></div>
+      <div>
         <button type="submit" class="add-button">Add to shopping list</button>
-        <button type="submit" class="remove-button">Remove from the shopping list</button>
+        <button type="submit" class="remove-button is-hidden">
+          Remove from the shopping list
+        </button>
+      </div>
     </div>
   </div>
 </div>
