--- a/src/style/layout/modal.css
+++ b/src/style/layout/modal.css
@@ -1,28 +1,15 @@
-.modal-open{
-  overflow: hidden;
-}
-
-.modal {
+.modal-shown {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1;
+  z-index: 0;
 }
 
-.modal.active,
-.modal-content.active {
-  opacity: 1;
-  visibility: visible;
-}
-.modal-content.active {
-  transform: translate(-50%, -50%); 
-  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
+
+
 .modal-content {
   position: fixed;
   background-color: #ffffff;
@@ -30,70 +17,74 @@
   margin: 0 auto;
   padding: 24px 40px;
   width: 335px;
-  height: 100hv;
+  height: 100vh;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); 
-  opacity: 0;
-  visibility: hidden;
+  transform: translate(-50%, -50%);
   transition: 0.3s all cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 30;
-   border: 2px solid #111111;
+  border: 2px solid #111111;
   border-radius: 18px;
 }
+
 @media only screen and (min-width: 768px) {
   .modal-content {
     width: 579px;
     height: 465px;
     padding: 40px;
   }
-  } 
-
-.close{
-position: absolute;
-top: 12px;
-right: 12px;
-padding: 0;
-border: none;
-display: flex;
-justify-content: center;
-width: 24px;
-height: 24px;
-background-color: #ffffff;
 }
-@media only screen and (min-width: 768px){
-  .close{
-  top: 24px;
-  right: 15px;
+
+.close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  padding: 0;
+  border: none;
+  display: flex;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  background-color: #ffffff;
+  margin: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .close {
+    top: 24px;
+    right: 15px;
   }
 }
-
+.close-icon{
+  fill: #111111;
+}
 .close-icon:hover,
 .close-icon:focus {
-  fill: #4F2EE8 ;
-
+  fill: #4F2EE8;
 }
 
-.modal-body{
+.modal-body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-@media screen and (min-width: 768px) { 
-  .modal-book-card{
-      display: flex;
-      gap: 24px;
-      
-  } 
+  position: relative;
+
 }
 
 @media screen and (min-width: 768px) {
-  .book-id{
-      display: flex;
-      justify-content: right;
-      gap: 40px;
-      margin-bottom: 10px;
-  }   
+  .modal-book-card {
+    display: flex;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .book-id {
+    display: flex;
+    justify-content: right;
+    gap: 40px;
+    margin-bottom: 10px;
+  }
 }
 
 .modal-cover {
@@ -105,37 +96,39 @@ background-color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
-  .modal-cover{
+  .modal-cover {
     height: 281px;
     width: 192px;
   }
 }
 
-.heading{
+.heading {
   max-width: 260px;
-}  
-.modal-title{
+}
+
+.modal-title {
   font-size: 24px;
   line-height: 28px;
   font-weight: bold;
 }
-.modal-author{
+
+.modal-author {
   font-size: 14px;
   line-height: 18px;
   font-style: italic;
   color: #B4AFAF;
 }
-.modal-description{
+
+.modal-description {
   font-size: 14px;
   line-height: 18px;
-  font-style: normal;  
-
+  font-style: normal;
 }
-.book-shops{
+
+.book-shops {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 20px;    
+  gap: 20px;
 }
 
 .book-info {
@@ -145,7 +138,15 @@ background-color: #ffffff;
   gap: 20px;
 }
 
-.add-button, .remove-button{
+.shop {
+  filter: grayscale(100%);
+}
+.shop:hover {
+  filter: drop-shadow(0px 3px 3px rgba(0,0,0,.35)) grayscale(100%);
+}
+
+.add-button,
+.remove-button {
   display: inline-block;
   background-color: #ffffff;
   padding: 20px;
@@ -155,13 +156,22 @@ background-color: #ffffff;
   line-height: 18px;
   border: 2px solid #4F2EE8;
   border-radius: 40px;
-
+}
+.add-button:focus,
+.remove-button:focus {
+  background: #4F2EE8;
+  color: #FFF;
+}
+.add-button:hover, 
+.remove-button:hover {
+  background: #4F2EE8;
+  color: #FFF;
 }
 @media screen and (min-width: 768px) {
-  .add-button, .remove-button{
-      width: 499px;
-      font-size: 18px;
-      line-height: 24px;
+  .add-button,
+  .remove-button {
+    width: 499px;
+    font-size: 18px;
+    line-height: 24px;
   }
-   
 }
