--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -1,22 +1,66 @@
-<section class="shopping">
-  <h2 class="main-header shopping-header">
+<section class="container">
+  <h2 class="main-header">
     Shopping <span class="main-header-accent">List</span>
   </h2>
   <div class="shopping-plug">
     <p class="shopping-plug-text">
       This page is empty, add some books and proceed to order.
     </p>
-    <picture class="shopping-plug-img">
-      <source srcset="
+    <picture>
+      <source
+        media="(min-width: 1440px)"
+        srcset="
           ./images/shopping-list/books-shopping-list.webp    1x,
           ./images/shopping-list/books-shopping-list@2x.webp 2x
-        " type="image/webp" />
-      <source srcset="
+        "
+        type="image/webp"
+      />
+      <source
+        media="(min-width: 1440px)"
+        srcset="
           ./images/shopping-list/books-shopping-list.png    1x,
           ./images/shopping-list/books-shopping-list@2x.png 2x
-        " />
-
-      <img src="./images/shopping-list/books-shopping-list.png" alt="Shopping list is empty" />
+        "
+        type="image/png"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/shopping-list/books-shopping-list.webp    1x,
+          ./images/shopping-list/books-shopping-list@2x.webp 2x
+        "
+        type="image/webp"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/shopping-list/books-shopping-list.png    1x,
+          ./images/shopping-list/books-shopping-list@2x.png 2x
+        "
+        type="image/png"
+      />
+      <source
+        media="(max-width: 767.98px)"
+        srcset="
+          ./images/shopping-list/books-shopping-list.webp    1x,
+          ./images/shopping-list/books-shopping-list@2x.webp 2x
+        "
+        type="image/webp"
+      />
+      <source
+        media="(min-width: 767.98px)"
+        srcset="
+          ./images/shopping-list/books-shopping-list.png    1x,
+          ./images/shopping-list/books-shopping-list@2x.png 2x
+        "
+        type="image/png"
+      />
+      <img
+        class="shopping-plug-img"
+        src="./images/shopping-list/books-shopping-list.png"
+        alt="Shopping list is empty"
+        loading="lazy"
+      />
     </picture>
   </div>
   <span class="loader is-hidden"></span>
