--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -59,7 +59,7 @@
 
 /* Button 1 */
 #button-1 .knobs:before {
-  content: 'ON';
+  content: '';
   position: absolute;
   top: 3px;
   left: 4px;
@@ -77,7 +77,7 @@
 }
 
 #button-1 .checkbox:checked + .knobs:before {
-  content: 'OFF';
+  content: '';
   left: 20px;
   background-color: white;
 }
