--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -34,7 +34,7 @@
   /* min-height: 300px; */
   border-radius: 18px;
   border: 2px solid var(--color-black);
-  background-color: var(--color-light-gray);
+  background-color: var(--color-light-gray-modal);
   margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
@@ -62,7 +62,7 @@
 .login-btn:focus {
   transform: rotate(360deg);
   scale: 1.1;
-  outline: 2px solid black;
+  outline: 2px solid var(--color-black);
 }
 
 @media screen and (min-width: 768px) {
@@ -74,7 +74,7 @@
   .login-btn:focus {
     transform: rotate(360deg);
     scale: 1.3;
-    outline: 3px solid black;
+    outline: 3px solid var(--color-black);
   }
 }
 
@@ -120,6 +120,7 @@
   line-height: 1.12;
   letter-spacing: 0.01em;
   text-transform: uppercase;
+  background-color: var(--color-white);
 }
 
 .login-field-input:not(:placeholder-shown):required:valid {
@@ -129,7 +130,6 @@
 .login-field-input:not(:placeholder-shown):required:invalid {
   border: 2px solid brown;
   color: brown;
-
 }
 
 @media screen and (min-width: 768px) {
@@ -217,7 +217,7 @@
   padding: 16px;
   border-radius: 40px;
   background: var(--color-black);
-  color: #f3f3f3;
+  color: var(--color-white);
   font-family: DM Sans;
   font-weight: 700;
   line-height: 1.12;
