Header|Mobile-menu
-display none
+js is-hidden
+animation in mobile-menu close
+ class link in header and mobile-menu.
-text decoration from css

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,11 +12,11 @@
       <nav class="main-nav">
         <ul class="menu nav-list">
           <li class="nav-item">
-            <a href="./index.html" id="home-link" class="nav-link">Home</a>
+            <a href="./index.html" id="home-link" class="nav-link link">Home</a>
           </li>
           <li class="nav-item">
             <a
-              class="nav-link shop-link"
+              class="nav-link shop-link link"
               href="./shoppinglist.html"
               id="shopping-list-link"
               target="_self"
