--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -24,7 +24,7 @@
     </div>
     <button class="menu-toggle js-close-menu">
       <svg
-        class="burger-icon"
+        class="burger-icon icon-animation"
         width="32"
         height="32"
         aria-label="close menu button"
@@ -33,7 +33,7 @@
       </svg>
     </button>
   </div>
-  <a class="profile-link" href="#">
+  <a class="profile-link link" href="#">
     <img
       class="profile-img"
       src="./images/profil-img/ellipse-3.webp"
@@ -47,7 +47,7 @@
   </a>
   <ul class="mobile-menu">
     <li class="menu-item">
-      <a href="index.html" class="mob-link">HOME</a>
+      <a href="index.html" class="mob-link link">HOME</a>
     </li>
     <li class="menu-item">
       <a href="shoppinglist.html" class="mob-link"
@@ -63,7 +63,7 @@
     </li>
   </ul>
   <div class="mobile-logoutbtn-container">
-    <a href="#" class="mobile-logout" id="logout-link">
+    <a href="#" class="mobile-logout link" id="logout-link">
       Log out
       <svg width="20" height="20" aria-label="Logout Icon">
         <use href="./images/sprite.svg#arrow-right"></use>
