--- a/src/style/base/common.css
+++ b/src/style/base/common.css
@@ -101,7 +101,7 @@ section {
   display: block;
 }
 body {
-  font-family: DM Sans;
+  font-family: 'DM Sans', Arial, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
