--- a/src/style/base/container.css
+++ b/src/style/base/container.css
@@ -28,6 +28,7 @@
 @media screen and (min-width: 1440px) {
   .container {
     display: flex;
+    justify-content: center;
     max-width: 1440px;
     padding: 40px 24px 72px;
   }
