--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -37,6 +37,8 @@
               class="section-support-png"
               src="./images/support/mobile/save_the_children_mobil.png"
               alt="Save the Children Logo"
+              width="131px"
+              height="32px"
             />
           </picture>
         </a>
@@ -67,6 +69,8 @@
               class="section-support-png"
               src="./images/support/mobile/project_hope_mobil.png"
               alt="Project HOPE Logo"
+              width="62px"
+              height="32px"
             />
           </picture>
         </a>
@@ -98,6 +102,8 @@
               class="section-support-png"
               src="./images/support/mobile/international_medical_corps_mobil.png"
               alt="International Medical Corps Logo"
+              width="101px"
+              height="32px"
             />
           </picture>
         </a>
@@ -129,6 +135,8 @@
               class="section-support-png"
               src="./images/support/mobile/razom_mobil.png"
               alt="RAZOM Logo"
+              width="82px"
+              height="32px"
             />
           </picture>
         </a>
@@ -159,6 +167,8 @@
               class="section-support-png"
               src="./images/support/mobile/action_against_hunger_mobil.png"
               alt="Action against hunger Logo"
+              width="55px"
+              height="32px"
             />
           </picture>
         </a>
@@ -190,6 +200,8 @@
               class="section-support-png"
               src="./images/support/mobile/serhiy_prytula_charity_foundation_mobil.png"
               alt="Serhiy Prytula Charity FoundationLogo"
+              width="115px"
+              height="32px"
             />
           </picture>
         </a>
@@ -221,6 +233,8 @@
               class="section-support-png"
               src="./images/support/mobile/medicins_sans_frontieres_mobil.png"
               alt="Medicins Sans Frontieres Logo"
+              width="102px"
+              height="32px"
             />
           </picture>
         </a>
@@ -253,6 +267,8 @@
               class="section-support-png"
               src="./images/support/mobile/world_vision_mobil.png"
               alt="World vision Logo"
+              width="81px"
+              height="32px"
             />
           </picture>
         </a>
@@ -284,6 +300,8 @@
               class="section-support-png"
               src="./images/support/mobile/united24_mobil.png"
               alt="UNITED24 Logo"
+              width="114px"
+              height="32px"
             />
           </picture>
         </a>
