--- a/src/style/layout/support.css
+++ b/src/style/layout/support.css
@@ -50,15 +50,18 @@
 }
 
 .section-support-png {
+  box-sizing: content-box;
   padding-left: 16px;
+  transition: all 0.3s ease-in;
+
+  filter: brightness(0) invert(1);
 }
-/* .section-support-link:hover { */
-/* filter: brightness(0) invert(1); */
-/* } */
-/* .section-support-link:focus { */
-/* filter: brightness(0) invert(1); */
-/* } */
-/*  */
+.section-support-png:hover,
+.section-support-png:focus {
+  filter: none;
+  scale: 1.2;
+}
+
 .logo-ukr {
   margin-left: 12px;
 }
@@ -90,8 +93,6 @@
 @media screen and (min-width: 375px) {
   .section-support {
     max-width: 335px;
-    margin-left: 20px;
-    margin-right: 20px;
     margin-top: 40px;
     margin-bottom: 40px;
   }
@@ -104,8 +105,6 @@
   .section-support {
     max-width: 335px;
     margin-top: 40px;
-    margin-left: 32px;
-    margin-right: 32px;
     margin-bottom: 98px;
   }
   .section-support-container {
@@ -129,7 +128,5 @@
   .section-support {
     max-width: 356px;
     margin-top: 86px;
-    margin-left: 24px;
-    margin-right: 40px;
   }
 }
