--- a/src/style/base/container.css
+++ b/src/style/base/container.css
@@ -7,7 +7,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 335px;
 }
 @media screen and (min-width: 375px) {
   .container {
@@ -22,6 +22,8 @@
   }
   .sidebar {
     flex-direction: row;
+    justify-content: ;
+    width: 704px;
   }
 }
 
@@ -35,5 +37,6 @@
   .sidebar {
     flex-direction: column;
     margin-right: 40px;
+    width: 356px;
   }
 }
