--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -1,5 +1,5 @@
 .vertical-menu {
-  max-width: 335px;
+  width: 100%;
   height: 228px;
   overflow-y: auto;
 }
@@ -8,15 +8,10 @@
 } */
 @media only screen and (min-width: 768px) {
   .vertical-menu {
-    width: 337px;
     height: 472px;
   }
 }
-@media only screen and (min-width: 1440px) {
-  .vertical-menu {
-    width: 356px;
-  }
-}
+
 .vertical-menu li {
   text-decoration: none;
   margin-bottom: 32px;
