--- a/src/style/layout/clock.css
+++ b/src/style/layout/clock.css
@@ -8,5 +8,7 @@
 @media only screen and (min-width: 1440px) {
   .clock {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
