--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,19 +1,18 @@
 <div class="modal-shown is-hidden">
-  <div class="modal-content">
-    <button class="close" type="button">
-      <svg class="close-icon" width="28" height="28">
-        <use href="./images/sprite.svg#icon-x-close"></use>
-      </svg>
-    </button>
+  <button class="login-btn close" type="button">
+    <svg class="login-btn-icon" width="28" height="28">
+      <use href="./images/sprite.svg#icon-x-close"></use>
+    </svg>
+  </button>
 
-    <div class="modal-body">
-      <div class="modal-book-card"></div>
-      <div>
-        <button type="submit" class="add-button">Add to shopping list</button>
-        <button type="submit" class="remove-button is-hidden">
-          Remove from the shopping list
-        </button>
-      </div>
+  <div class="modal-body">
+    <div class="modal-book-card"></div>
+    <div>
+      <button type="submit" class="add-button">Add to shopping list</button>
+      <button type="submit" class="remove-button is-hidden">
+        Remove from the shopping list
+      </button>
+      <p class="add-success-message"></p>
     </div>
   </div>
 </div>
