--- a/src/style/layout/modal.css
+++ b/src/style/layout/modal.css
@@ -1,41 +1,55 @@
-.modal-shown {
+.background{
+  background: rgba(17, 17, 17, 0.40);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  z-index: 0;
 }
-
-.modal-content {
+.modal-shown {
   position: fixed;
-  background-color: var(--color-white);
+  background-color: #ffffff;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 24px 40px;
   width: 335px;
-  height: 100vh;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  transition: 0.3s all cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%) scale(0.8);
+  transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 30;
-  border: 2px solid var(--color-black);
+  border: 2px solid #111111;
   border-radius: 18px;
 }
 
+.modal-shown.show {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease, visibility 0s;
+}
+
+.modal-shown.show {
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-shown.show.fade-out {
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(0.8);
+  transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media only screen and (min-width: 768px) {
-  .modal-content {
+  .modal-shown {
     width: 579px;
     height: 465px;
     padding: 40px;
   }
 }
 
-.close {
+/* .close {
   position: absolute;
-  top: 12px;
+  top: 100px;
   right: 12px;
   padding: 0;
   border: none;
@@ -43,9 +57,8 @@
   justify-content: center;
   width: 24px;
   height: 24px;
-  background-color: var(--color-white);
-  margin: 0;
-}
+  background-color: white;
+} */
 
 @media only screen and (min-width: 768px) {
   .close {
@@ -54,7 +67,7 @@
   }
 }
 .close-icon {
-  fill: var(--color-black);
+  fill: black;
 }
 .close-icon:hover,
 .close-icon:focus {
@@ -65,7 +78,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  position: relative;
 }
 
 @media screen and (min-width: 768px) {
@@ -160,16 +172,19 @@
   line-height: 18px;
   border: 2px solid var(--color-blue);
   border-radius: 40px;
+  text-align: center;
 }
 .add-button:focus,
 .remove-button:focus {
   background: var(--color-blue);
   color: var(--color-white-all-time);
+  text-align: center;
 }
 .add-button:hover,
 .remove-button:hover {
   background: var(--color-blue);
   color: var(--color-white-all-time);
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .add-button,
@@ -177,5 +192,25 @@
     width: 499px;
     font-size: 18px;
     line-height: 24px;
+  }
+}
+
+.add-success-message {
+  display: block;
+  margin: 8px auto 0;
+  width: 242px;
+  color: rgba(17, 17, 17, 0.5);
+  text-align: center;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: -0.4px;
+}
+@media screen and (min-width: 768px) {
+  .add-success-message {
+    width: 324px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: -0.48px;
   }
 }
