--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -11,38 +11,20 @@
       </a>
     </div>
     <div class="switcher">
-      <div class="button r" id="button-1">
-        <input
-          class="checkbox dark-mode-toggle"
-          type="checkbox"
-          id="dark-mode-toggle-two"
-          aria-label="toggle dark mode"
-        />
-        <div class="knobs"></div>
-        <div class="layer"></div>
-      </div>
+      <input class="checkbox dark-mode-toggle" type="checkbox" id="dark-mode-toggle-two" />
+      <label for="dark-mode-toggle-two">Toggle</label>
     </div>
     <button class="menu-toggle js-close-menu">
-      <svg
-        class="burger-icon icon-animation"
-        width="32"
-        height="32"
-        aria-label="close menu button"
-      >
+      <svg class="burger-icon icon-animation" width="32" height="32" aria-label="close menu button">
         <use href="./images/sprite.svg#icon-x-close"></use>
       </svg>
     </button>
   </div>
   <a class="profile-link link" href="#">
-    <img
-      class="profile-img"
-      src="./images/profil-img/ellipse-3.webp"
-      alt="User profile image"
-      srcset="
+    <img class="profile-img" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
         ./images/profil-img/ellipse-3.webp    1x,
         ./images/profil-img/ellipse-3@2x.webp 2x
-      "
-    />
+      " />
     <span class="profile-text">Stephen</span>
   </a>
   <ul class="mobile-menu">
@@ -50,13 +32,8 @@
       <a href="index.html" class="mob-link link">HOME</a>
     </li>
     <li class="menu-item">
-      <a href="shoppinglist.html" class="mob-link"
-        >SHOPPING LIST<svg
-          class="logo-icon"
-          width="20"
-          height="20"
-          aria-label="logotype"
-        >
+      <a href="shoppinglist.html" class="mob-link">SHOPPING LIST<svg class="logo-icon" width="20" height="20"
+          aria-label="logotype">
           <use href="./images/sprite.svg#icon-uil-cart"></use>
         </svg>
       </a>
