--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -1,93 +1,47 @@
 /* ===============Switcher============== */
-.knobs,
-.layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+
+input[type='checkbox'] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
 }
 
-.logo-icon {
-  fill: var(--color-black);
-}
-.button {
-  position: relative;
-  top: 50%;
-  width: 40px;
-  height: 20px;
-  margin-right: 14px;
-  overflow: hidden;
-}
-
-.button.r,
-.button.r .layer {
-  border-radius: 100px;
-}
-
-.button.b2 {
-  border-radius: 2px;
-  width: 40px;
-  height: 20px;
-}
-
-.checkbox {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  opacity: 0;
+label {
   cursor: pointer;
-  z-index: 3;
+  text-indent: -9999px;
+  width: 40px;
+  height: 20px;
+  background: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
+  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1) inset;
+  display: block;
+  border-radius: 20px;
+  position: relative;
 }
 
-.knobs {
-  z-index: 2;
-}
-
-.layer {
-  width: 100%;
-  background-color: #4f2ee8;
-  box-shadow: var(--layer-bg-box-shadow);
-
-  transition: 0.3s ease all;
-  z-index: 1;
-}
-
-/* Button 1 */
-#button-1 .knobs:before {
+label:after {
   content: '';
   position: absolute;
-  top: 3px;
-  left: 4px;
+  top: 1px;
+  left: 1px;
   width: 18px;
-  height: 15px;
-  color: blue;
-  font-size: 6px;
-  font-weight: bold;
-  text-align: center;
-  line-height: 1;
-  padding: 4px 2px;
-  background-color: white;
-  border-radius: 50%;
-  transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+  height: 18px;
+  background: #fff;
+  border-radius: 18px;
+  transition: 0.3s;
 }
 
-#button-1 .checkbox:checked + .knobs:before {
-  content: '';
-  left: 20px;
-  background-color: white;
+input:checked + label {
+  background: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
+  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.1) inset;
 }
 
-#button-1 .checkbox:checked ~ .layer {
-  background-color: var(--color-blue);
+input:checked + label:after {
+  left: calc(100% - 1px);
+  transform: translateX(-100%);
 }
 
-#button-1 .knobs,
-#button-1 .knobs:before,
-#button-1 .layer {
-  transition: 0.3s ease all;
+label:active:after {
+  width: 38px;
 }
 
 /* -----------------------Header ----------------------------------------*/
@@ -100,7 +54,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0;
 }
 .logo {
   display: flex;
@@ -126,9 +79,12 @@
   display: flex;
   align-items: center;
 }
-.switcher-button {
+.switcher {
   display: flex;
+  justify-content: center;
   align-items: center;
+  margin-right: 14px;
+  margin-left: auto;
 }
 @media only screen and (min-width: 375px) {
   .nav-container {
@@ -393,7 +349,9 @@
     right: 32px;
     color: var(--color-black);
   }
-
+  .switcher {
+    margin-right: 24px;
+  }
   /*------------- Hiden features -------------------*/
   .menu-toggle.js-open-menu {
     display: none;
@@ -442,7 +400,7 @@
   .signup-container {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    margin-left: 0;
     background-color: var(--color-blue);
     border-radius: 36px;
     min-width: 185px;
@@ -547,14 +505,10 @@
     display: flex;
     align-items: center;
   }
-  .switcher {
-    display: flex;
-    align-items: center;
-  }
   .signup-container {
     display: flex;
     align-items: center;
-    margin: 0;
+    margin-left: 0;
   }
   .logo-icon {
     max-width: 100%;
