--- a/src/style/layout/modal.css
+++ b/src/style/layout/modal.css
@@ -1,5 +1,5 @@
-.background{
-  background: rgba(17, 17, 17, 0.40);
+.background {
+  background: rgba(17, 17, 17, 0.4);
   position: fixed;
   top: 0;
   left: 0;
@@ -8,7 +8,7 @@
 }
 .modal-shown {
   position: fixed;
-  background-color: #ffffff;
+  background-color: var(--color-body-bg);
   box-sizing: border-box;
   margin: 0 auto;
   padding: 24px 40px;
@@ -18,7 +18,7 @@
   transform: translate(-50%, -50%) scale(0.8);
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 30;
-  border: 2px solid #111111;
+  border: 2px solid var(--color-black);
   border-radius: 18px;
 }
 
@@ -67,7 +67,7 @@
   }
 }
 .close-icon {
-  fill: black;
+  fill: var(--color-black);
 }
 .close-icon:hover,
 .close-icon:focus {
@@ -164,7 +164,7 @@
 .add-button,
 .remove-button {
   display: inline-block;
-  background-color: var(--color-white);
+  background-color: transparent;
   padding: 20px;
   min-width: 211px;
   color: var(--color-black);
@@ -199,7 +199,7 @@
   display: block;
   margin: 8px auto 0;
   width: 242px;
-  color: rgba(17, 17, 17, 0.5);
+  color: var(--color-black-transparent);
   text-align: center;
   font-size: 10px;
   font-weight: 400;
