--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,7 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <div class="header-menu">
     <div class="logo-container">
-      <a href="#" class="logo">
+      <a href="./index.html" class="logo">
         <svg class="logo-icon" width="24" height="24" aria-label="logotype">
           <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
@@ -10,7 +10,7 @@
         </svg>
       </a>
     </div>
-    <div class="switcher">
+    <div class="switcher-burger">
       <input class="checkbox dark-mode-toggle" type="checkbox" id="dark-mode-toggle-two" />
       <label for="dark-mode-toggle-two">Toggle</label>
     </div>
