support + bookshelf-color

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <svg class="logo-icon" width="24" height="24" aria-label="logotype">
           <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
-        <svg class="logo-icon" width="77" height="14" aria-label="logotype">
+        <svg class="logo-icon logo-icon-bookshelf" width="77" height="14" aria-label="logotype">
           <use href="./images/sprite.svg#bookshelf"></use>
         </svg>
       </a>
