--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -227,6 +227,9 @@ label:active:after {
   fill: var(--color-white);
 }
 
+.logo-icon-bookshelf {
+  fill: var(--color-black);
+}
 .close-icon {
   fill: var(--color-white);
 }
