margin gap support

--- a/src/style/base/container.css
+++ b/src/style/base/container.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   width: 335px;
+  gap: 40px;
 }
 @media screen and (min-width: 375px) {
   .container {
@@ -23,6 +24,7 @@
   .sidebar {
     flex-direction: row;
     width: 704px;
+    gap: 32px;
   }
 }
 
@@ -37,5 +39,6 @@
     flex-direction: column;
     margin-right: 40px;
     width: 356px;
+    gap: 86px;
   }
 }
