--- a/src/style/layout/support.css
+++ b/src/style/layout/support.css
@@ -14,10 +14,6 @@
   display: flex;
   flex-direction: column;
 }
-.section-support {
-  margin-left: 0;
-  margin-right: 0;
-}
 .section-support-title {
   display: flex;
   align-items: center;
@@ -91,20 +87,19 @@
   fill: var(--color-blue);
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 767px) {
   .section-support {
     max-width: 335px;
-  }
-  .section-support-container {
-    margin-bottom: 40px;
   }
 }
 
 @media screen and (min-width: 768px) {
+  .section-support {
+    width: 335px;
+  }
   .section-support-container {
     padding: 24px 40px;
     width: 335px;
-    margin-bottom: 98px;
   }
   .section-support-title {
     font-size: 24px;
@@ -119,9 +114,6 @@
 
 @media screen and (min-width: 1440px) {
   .section-support {
-    max-width: 356px;
-  }
-  .section-support-container {
-    margin-bottom: 0;
+    width: 100%;
   }
 }
