--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,6 +2,8 @@
   <h1 class="main-header">
     Best Sellers <span class="main-header-accent">Books</span>
   </h1>
-  <span class="loader"></span>
+  <div class="loader-backdrop is-hidden">
+    <span class="loader"></span>
+  </div>
   <div class="bestsellers-list"></div>
 </section>
