--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,7 @@
 @import './layout/all-categories.css';
 @import './layout/header.css';
 @import './layout/main.css';
+@import './layout/loader.css';
 @import './layout/login.css';
 @import './layout/modal.css';
 @import './layout/plug.css';
