--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,4 +1,5 @@
 <section class="bestsellers">
+  <button class="button-scroll-up" type="button" id="button-scroll-up">&#5123;</button>
   <h1 class="main-header">
     Best Sellers <span class="main-header-accent">Books</span>
   </h1>
@@ -6,4 +7,5 @@
     <span class="loader"></span>
   </div>
   <div class="bestsellers-list"></div>
+
 </section>
