--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,3 +15,4 @@
 @import './layout/support.css';
 @import './layout/clock.css';
 @import './layout/loader.css';
+@import './layout/scroll-up-btn.css';
