--- a/src/style/layout/scroll-up-btn.css
+++ b/src/style/layout/scroll-up-btn.css
@@ -1,12 +1,30 @@
-.scroll-to-top-button {
+#button-scroll-up {
+  opacity: 0;
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  display: none;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
+  right: 50px;
+  bottom: 50px;
   cursor: pointer;
+  display: block;
+  font-size: 25px;
+  color: #fff;
+  border: 2px;
+  background: radial-gradient(
+    183.6% 183.01% at 59.76% -23.42%,
+    #4f2ee8 18.03%,
+    #ffffff 105%
+  );
+  padding: 14px 20px;
+  border-radius: 50px;
+  z-index: 15;
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+#button-scroll-up.show {
+  opacity: 1;
+  transition: opacity 0.5s, transform 0.5s;
+}
+
+#button-scroll-up:hover,
+#button-scroll-up:focus {
+  scale: 0.9;
 }
