User name and photo is working in header and buttoms shows up, some mistakes are fixed on header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,25 +37,17 @@
     </button>
     <div class="signup-container">
       <a href="./login.html" class="signup-link" id="signup-link">
+        <svg class="user-icon" width="37" height="37" aria-label="User img space">
+          <use href="./images/sprite.svg#user"></use>
+        </svg>
         <span class="signup-text"> Sign up </span>
         <svg class="signup-svg" width="20" height="20" aria-label="Sign up Icon">
           <use href="./images/sprite.svg#arrow-right"></use>
         </svg>
       </a>
     </div>
-    <div class="profile-container is-hidden">
-      <a class="profile-link" href="#">
-        <img class="profile-img" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
-              ./images/profil-img/ellipse-3.webp    1x,
-              ./images/profil-img/ellipse-3@2x.webp 2x
-            " />
-        <span class="profile-text">Stephen</span>
-        <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
-          <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
-        </svg>
-      </a>
-    </div>
-    <div class="signup-container is-hidden">
+    <div class="profile-container">
+      <div class="logout-container ">
       <a href="#" class="signup-link" id="signup-link">
         <span class="signup-text"> Log out </span>
         <svg width="20" height="20" aria-label="Sign up Icon">
@@ -63,6 +55,21 @@
         </svg>
       </a>
     </div>
+      <a class="profile-link" href="#">
+        <img class="profile-img" id="userImage" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
+              ./images/profil-img/ellipse-3.webp    1x,
+              ./images/profil-img/ellipse-3@2x.webp 2x
+            " />
+            <svg class="user-icon" width="37" height="37" aria-label="User img space">
+    <use href="./images/sprite.svg#user"></use>
+  </svg>
+        <span class="profile-text">Stephen</span>
+        <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
+          <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
+        </svg>
+      </a>
+    </div>
+    
   </div>
   </div>
 </header>
